INptro Page page overflow fixed

--- a/src/pages/home/components/IntroPage/Intropage.scss
+++ b/src/pages/home/components/IntroPage/Intropage.scss
@@ -1,4 +1,5 @@
 .intro {
+  overflow-x: hidden;
   .perspective {
     perspective: 1000px;
   }
